@@ -25,6 +25,7 @@ import java.lang.reflect.Method;
 import java.util.Enumeration;
 import java.util.HashMap;
 import java.util.Hashtable;
+import java.util.Locale;
 import java.util.Map;
 
 import javax.naming.Context;
@@ -148,7 +149,7 @@ public class BeanFactory
 
                 /* Look for properties with explicitly configured setter */
                 RefAddr ra = ref.get("forceString");
-                Map<String, Method> forced = new HashMap<String, Method>();
+                Map<String, Method> forced = new HashMap<>();
                 String value;
 
                 if (ra != null) {
@@ -170,7 +171,7 @@ public class BeanFactory
                             param = param.substring(0, index).trim();
                         } else {
                             setterName = "set" +
-                                         param.substring(0, 1).toUpperCase() +
+                                         param.substring(0, 1).toUpperCase(Locale.ENGLISH) +
                                          param.substring(1);
                         }
                         try {
@@ -233,22 +234,22 @@ public class BeanFactory
                                     Character.valueOf(value.charAt(0));
                             } else if (propType.equals(Byte.class)
                                        || propType.equals(byte.class)) {
-                                valueArray[0] = new Byte(value);
+                                valueArray[0] = Byte.valueOf(value);
                             } else if (propType.equals(Short.class)
                                        || propType.equals(short.class)) {
-                                valueArray[0] = new Short(value);
+                                valueArray[0] = Short.valueOf(value);
                             } else if (propType.equals(Integer.class)
                                        || propType.equals(int.class)) {
-                                valueArray[0] = new Integer(value);
+                                valueArray[0] = Integer.valueOf(value);
                             } else if (propType.equals(Long.class)
                                        || propType.equals(long.class)) {
-                                valueArray[0] = new Long(value);
+                                valueArray[0] = Long.valueOf(value);
                             } else if (propType.equals(Float.class)
                                        || propType.equals(float.class)) {
-                                valueArray[0] = new Float(value);
+                                valueArray[0] = Float.valueOf(value);
                             } else if (propType.equals(Double.class)
                                        || propType.equals(double.class)) {
-                                valueArray[0] = new Double(value);
+                                valueArray[0] = Double.valueOf(value);
                             } else if (propType.equals(Boolean.class)
                                        || propType.equals(boolean.class)) {
                                 valueArray[0] = Boolean.valueOf(value);
